'完善简历结构、新增搜索页面'

--- a/src/main.less
+++ b/src/main.less
@@ -4,3 +4,5 @@
 @menu-dark-title: #001529;
 @menu-dark-active-bg: #000c17;
 @layout-sider-background: #001529;
+
+.hiddenScrollbar::-webkit-scrollbar { width: 0 !important }
