--- a/src/main.less
+++ b/src/main.less
@@ -6,3 +6,9 @@
 @layout-sider-background: #001529;
 
 .hiddenScrollbar::-webkit-scrollbar { width: 0 !important }
+
+.line {
+  width: 100%;
+  height:1px;
+  background:#E5E5E5;
+}
