'暂时性修复路由中，异步Token加载问题'

--- a/src/main.less
+++ b/src/main.less
@@ -5,7 +5,12 @@
 @menu-dark-active-bg: #000c17;
 @layout-sider-background: #001529;
 
+//chrome 和Safari
 .hiddenScrollbar::-webkit-scrollbar { width: 0 !important }
+//IE 10+
+.hiddenScrollbar { -ms-overflow-style: none; }
+//Firefox
+.hiddenScrollbar { overflow: -moz-scrollbars-none; }
 
 .line {
   width: 100%;
